--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>❌ Wrong Website</title>
+    <title>SpedTyper.dev - Domain for Sale</title>
 </head>
 <body>
     <div class="content">
-        <h3>spedtyper.dev: Wrong Website
+        <h3>spedtyper.dev is available for sale
             <script>
                 fetch('https://api.github.com/repos/ibnaleem/spedtyper.dev/commits?per_page=1')
                     .then(res => res.json())
@@ -35,9 +35,19 @@
             <span id="latest-commit">...
             </span>
         </h3>
-        <p>You are on the wrong website. The correct address is <a href="https://speedtyper.dev">https://speedtyper.dev</a></p>
-        <p>Interested in buying <i>spedtyper.dev</i>? Email me on <a href="mailto:contact@spedtyper.dev">contact@spedtyper.dev</a>. You can encrypt + sign emails to <a href="pgp.txt">this pgp key.</a></p>
-        <p><i>Disclaimer: this domain (spedtyper.dev) is not affiliated, endorsed or related to speedtyper.dev.</i></p>
+        <p>Please note that you have reached an incorrect website. The intended address is <a
+                href="https://speedtyper.dev">https://speedtyper.dev</a></p>
+        <p>If you are interested in acquiring the domain <i>spedtyper.dev</i>, please contact us via email at <a
+                href="mailto:contact@spedtyper.dev">contact@spedtyper.dev</a>. For secure communication, you may encrypt and
+            sign your emails using <a href="pgp.txt">this PGP key</a>.</p>
+        <p>We accept the following payment methods:</p>
+        <ul>
+            <li>Ether (ETH)</li>
+            <li>Bitcoin (BTC)</li>
+            <li>Monero (XMR)</li>
+            <li><i>Other Cryptocurrencies</i></li>
+        </ul>
+        <p><i>Disclaimer: this domain (spedtyper.dev) is not affiliated, endorsed or related to speedtyper.dev in any way.</i></p>
     </div>
 </body>
 </html>
